--- a/templates/base.html
+++ b/templates/base.html
@@ -38,13 +38,15 @@
       {% block page %}{% endblock %}
     </div>
 
-    <div class="banner2">
-      <div class="container">
-	<div class="row-fluid">
-	  <div class="span12 padtop10">
-	    <p>&copy 2013 BYU Open Source Lab<br>
-	    <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-	    </p>
+    <div id="footer">
+      <div class="banner2">
+	<div class="container">
+	  <div class="row-fluid">
+	    <div class="span12 padtop10">
+	      <p>&copy 2013 BYU Open Source Lab<br>
+		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
+	      </p>
+	    </div>
 	  </div>
 	</div>
       </div>
