--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
       <div class="span12">
 	<div class="padtop">
 	  <h1 class="title">BYU Open Source Lab</h1>
-	  <h2 class="subtitle">coding for a better world</h2>
+	  <h2 class="subtitle">software is our service</h2>
 	</div>
       </div>
     </div>
@@ -19,23 +19,23 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">Citizen Budget</span></h3>
+	<h3><span class="project-title">Civic Apps</span></h3>
       </div>
     </div>
   </div>
   <div class="container project-description">
     <div class="row-fluid">
-      <div class="span12">
+      <div class="span4">
+	<p>We build apps that help local governments connect with
+	  residents. Local governments often do not have the resources
+	  to buy into expensive proprietary systems. Using open source
+	  software means cities and counties can cooperate to help
+	  improve the software, while benefiting from a much more
+	  complete and robust system than they could afford on their
+	  own.</p>
+      </div>
+      <div class="span8">
 	<img src="/static/img/citizen-budget.png"></img>
-	<p>An online budgeting app that helps residents see how their
-	  tax dollars are being spent, with easy-to-read charts and graphs. A
-	  city or county government uploads their complete financial data,
-	  and Citizen Budget automatically loads all funds and categories,
-	  showing yearly trends for easy analysis.</p>
-
-	<p>Code is
-	  at <a href="https://github.com/byu-osl/citizen-budget">GitHub</a>.
-	</p>
       </div>
     </div>
   </div>
@@ -45,31 +45,28 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">leaf</span></h3>
+	<h3><span class="project-title">Family History</span></h3>
       </div>
     </div>
   </div>
   <div class="container project-description">
     <div class="row-fluid">
-      <div class="span12">
-	<img src="/static/img/leaf-chart.png"></img>
-	<p>leaf is designed to help you find &#8220;holes&#8221; in
-	the genealogy you have stored
-	in <a href="http://www.familysearch.org">FamilySearch</a>. A
-	hole is any person with missing information &#8212; a birth or
-	death event, a spouse or children, or temple ordinances. Users
-	login to FamilySearch, and then leaf displays their genealogy
-	in ancestry and descendancy charts, color coded to indicate
-	where the holes are located. Users can customize what kind of
-	holes they are looking for, and can also use a powerful search
-	engine to find holes on collateral lines.</p>
-	
-	<p>The free web site is available
-	at <a href="http://leaf.byu.edu" >leaf.byu.edu</a>. Some of
-	the basic code that makes leaf work is available
-	at <a href="https://github.com/byu-osl/familytree-sample-app"
-	onclick="javascript:_gaq.push(['_trackEvent','outbound-article','http://github.com']);">GitHub</a>.</p>
+      <div class="span4">
+	<p>We have a passion for helping families find their
+	  ancestors. BYU is uniquely positioned to contribute
+	  technology that makes a difference in this area -- we have
+	  professors actively conducting research in related areas,
+	  such as handwriting recognition, image analysis, machine
+	  learning, social networking, usability, and software
+	  engineering. We also enjoy a relationship with
+	  <a href="http://familysearch.org">FamilySearch</a>, since it
+	  is also operated by the LDS Church. Building open source
+	  software is our way of collaborating with a worldwide
+	  community of developers who share our passion.
+	</p>
       </div>
+      <div class="span8">
+	<img src="/static/img/leaf-click.png"></img>
     </div>
   </div>
 </div>
