Added GitHub ribbon using http://codepo8.github.io/css-fork-on-github-ribbon/

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
 	  </a>
-	  <a class="brand" href="#">BYU Open Source Lab</a>
+	  <a class="brand" href="/">BYU Open Source Lab</a>
 	  <div class="nav-collapse collapse">
 	    <ul class="nav nav-pills">
 	      <li id="menu-home" {% if active == "menu-home" %}class="active"{% endif %}><a href="/" >Home</a></li>
@@ -51,6 +51,11 @@
 	</div>
       </div>
     </div>
+
+    <span id="forkongithub">
+      <a href="https://github.com/organizations/byu-osl">Fork
+	me on GitHub</a>
+    </span>
 
   </body>
 </html>
