--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,8 @@
     <link rel="shortcut icon" href="/static/img/favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-    <link href="/static/css/bootstrap.css" rel="stylesheet">
-    <link href="/static/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/static/css/app.css" rel="stylesheet">
   </head>
   <body>
