--- a/static/css/app.css
+++ b/static/css/app.css
@@ -20,6 +20,10 @@ body {
     box-shadow: none;
 }
 
+.navbar .brand {
+    padding: 8px 20px 10px;
+}
+
 .navbar .nav > .active > a, .navbar .nav > .active a:hover, .navbar .nav > .active > a:focus {
     background: #1695a3;
     color: white;
