Added bookout image for the project page.

--- a/templates/projects.html
+++ b/templates/projects.html
@@ -51,7 +51,7 @@
   <div class="container project-description">
     <div class="row-fluid">
       <div class="span12">
-	<img src="/static/img/citizen-budget.png"></img>
+	<img src="/static/img/bookout.png"></img>
 	<p>Bookout is a person-to-person lending library. Its design
 	was inspired by a small town without funds to build a public
 	library, recognizing that the residents themselves had plenty
