Fixed GitHub link

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
     </div>
 
     <span id="forkongithub">
-      <a href="https://github.com/byu-osl">Fork
+      <a href="https://github.com/byu-osl/osl-webpages">Fork
 	me on GitHub</a>
     </span>
 
