--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
 	  </a>
-	  <a class="brand" href="/">BYU Open Source Lab</a>
+	  <img class="logo" src="/static/img/logo.png">
 	  <div class="nav-collapse collapse">
 	    <ul class="nav nav-pills">
 	      <li id="menu-home" {% if active == "index" %}class="active"{% endif %}><a href={{url_for("index")}}>Home</a></li>
@@ -39,13 +39,11 @@
     </div>
 
     <div id="footer">
-      <div class="banner2">
+      <div class="banner3">
 	<div class="container">
 	  <div class="row-fluid">
 	    <div class="span12 padtop10">
-	      <p>&copy 2013 BYU Open Source Lab<br>
-		<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US">Creative Commons Attribution-ShareAlike 3.0 Unported License</a>.
-	      </p>
+	      <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/3.0/88x31.png" /></a> &copy 2013 BYU Open Source Lab
 	    </div>
 	  </div>
 	</div>
