--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,12 @@
 
 {% block page %}
 
-<div class="banner2 borders">
+<div class="banner2">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
 	<div class="padtop">
-	  <h1 class="title">BYU Open Source Lab</h1>
-	  <h2 class="subtitle">software is our service</h2>
+	  <h1 class="title">Software is our Service</h1>
 	</div>
       </div>
     </div>
@@ -19,7 +18,7 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">Civic Apps</span></h3>
+	<h3><span class="project-title"><a href="/projects">Civic Apps</a></span></h3>
       </div>
     </div>
   </div>
@@ -27,12 +26,12 @@
     <div class="row-fluid">
       <div class="span4">
 	<p>We build apps that help local governments connect with
-	  residents. Local governments often do not have the resources
-	  to buy into expensive proprietary systems. Using open source
-	  software means cities and counties can cooperate to help
-	  improve the software, while benefiting from a much more
-	  complete and robust system than they could afford on their
-	  own.</p>
+	  residents. Cities and counties often do not have the
+	  resources to purchase expensive proprietary systems. Using
+	  open source software means cities and counties can cooperate
+	  to help improve the software, while benefiting from a much
+	  more complete and flexible system than they could afford on
+	  their own.</p>
       </div>
       <div class="span8">
 	<img src="/static/img/citizen-budget.png"></img>
@@ -41,7 +40,7 @@
   </div>
 </div>
 
-<div class="banner4">
+<div class="banner3">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
@@ -71,7 +70,7 @@
   </div>
 </div>
 
-<div class="banner2">
+<div class="banner4">
   <div class="container">
     <div class="row-fluid">
       <div class="span4">
@@ -94,12 +93,10 @@
       <div class="span4">
 	<h3>Get Involved</h3>
 	<p>We are seeking partners that are willing to sponsor a
-	project, provide guidance on design, or even contribute
+	project, provide guidance on design, or contribute
 	code. We have a limited number of paid lab positions available
 	to BYU students and are seeking donations to expand the number
-	of students we can support. We also encourage students to
-	contribute code in their spare time, so they can build up
-	their portfolio.</p>
+	of students we can support.</p>
       </div>
     </div>
   </div>
