--- a/templates/people.html
+++ b/templates/people.html
@@ -2,7 +2,7 @@
 
 {% block page %}
 
-<div class="banner2 borders">
+<div class="banner2">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
@@ -52,23 +52,28 @@
   </div>
 </div>
 
-<div class="banner3">
+<div class="banner2">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">Contributors</span></h3>
+	<div class="padtop">
+	  <h1>Contributors</h1>
+	</div>
       </div>
     </div>
   </div>
+</div>
+
+<div class="banner3">
   <div class="container project-description">
     <div class="row-fluid">
       <div class="span4">
 	<h4>Citizen Budget</h4>
 	<ul>
+	  <li>Daniel Zappala</li>
 	  <li>Eric Lazalde</li>
 	  <li>Christopher Morgan</li>
 	  <li>Dallin Smith</li>
-	  <li>Daniel Zappala</li>
 	</ul>
       </div>
       <div class="span4">
@@ -88,6 +93,18 @@
 	<h4>leaf</h4>
 	<ul>
 	  <li>Daniel Zappala</li>
+	  <li>Charles Knutson</li>
+	  <li>Jonathon Klein</li>
+	  <li>Justin Seliger</li>
+	  <li>Justin York</li>
+	  <li>Robert Brown</li>
+	  <li>Steven Nay</li>
+	  <li>Brandon Reid</li>
+	  <li>Bryan Whitney</li>
+	  <li>Scott Erickson</li>
+	  <li>Reed Allred</li>
+	  <li>Kevin Rampton</li>
+	  <li>and numerous other students</li>
 	</ul>
       </div>
   </div>
