--- a/templates/projects.html
+++ b/templates/projects.html
@@ -2,7 +2,7 @@
 
 {% block page %}
 
-<div class="banner2 borders">
+<div class="banner2">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
@@ -18,7 +18,7 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">Citizen Budget</span></h3>
+	<h3><span class="project-title"><a href="http://citizenbudget.org">Citizen Budget</a></span></h3>
       </div>
     </div>
   </div>
@@ -32,7 +32,10 @@
 	  and Citizen Budget automatically loads all funds and categories,
 	  showing yearly trends for easy analysis.</p>
 
-	<p>Code is
+	<p>Detailed information, including installation documentation
+	  and installation instructions is
+	  at <a href="http://citizenbudget.org">citizenbudget.org</a>.
+	  Code is
 	  at <a href="https://github.com/byu-osl/citizen-budget">GitHub</a>.
 	</p>
       </div>
@@ -44,7 +47,7 @@
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">BookOut</span></h3>
+	<h3><span class="project-title"><a href="https://github.com/byu-osl/bookout">BookOut</a></span></h3>
       </div>
     </div>
   </div>
@@ -71,7 +74,7 @@
   </div>
 </div>
 
-<div class="banner2 borders">
+<div class="banner2">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
@@ -83,11 +86,11 @@
   </div>
 </div>
 
-<div class="banner4">
+<div class="banner3">
   <div class="container">
     <div class="row-fluid">
       <div class="span12">
-	<h3><span class="project-title">leaf</span></h3>
+	<h3><span class="project-title"><a href="http://leaf.byu.edu">leaf</a></span></h3>
       </div>
     </div>
   </div>
