Updated logo and colors.

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -18,7 +18,7 @@ body {
 }
 
 .nav {
-    margin: 20px 0 0 20px !important;
+    margin: 15px 0 0 20px !important;
 }
 
 .navbar-inner {
@@ -69,6 +69,9 @@ body {
 
 .banner2 {
     background: #91b2d2;
+    background: #336699;
+    background: #394755;
+    background: #628cb6;
     color: white;
 }
 
